--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <p class="headerText"><b>Various roles (April 2012-June 2017)</b></p>
                     <ul>
                         <li class="buffer">
-                            <b>Analyst - Recovery and Compensation Policy (January 2015 – June 2017)</b>
+                            <b>Analyst - Recovery and Compensation Team (Prudential Policy Directorate - Structural Policy Division) (January 2015 – June 2017)</b>
                             <p class="employmentText">Contributed to the development of consumer protection policy and statutory oversight of the Financial Services Compensation Service (FSCS) by:</p>
                             <ul>
                                 <li>Working on BofE/PRA policy approach to matters relating to Insurance Guarantee Schemes.</li>
