--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="card-header">
             <a class="card-link" data-toggle="collapse" href="#collapseSkills">
             <i class="fas fa-wrench"></i>
-            Skills
+            Technical skills and transferable experience
             </a>
           </div>
           <div id="collapseSkills" class="collapse" data-parent="#accordion">
