--- a/index.html
+++ b/index.html
@@ -234,17 +234,26 @@
           <div class="card-header">
             <a class="collapsed card-link" data-toggle="collapse" href="#collapseOther">
             <i class="far fa-smile"></i>
-            Other
+            Interests and volunteering
             </a>
           </div>
           <div id="collapseOther" class="collapse" data-parent="#accordion">
             <div class="card-body">
             <ul>
-              <li><b>Guitar:</b>
-                  <p>I am a keen guitarist, and prior to commencing my degree I spent a very rewarding month volunteering with <a href="https://en-gb.facebook.com/theguitarsocial/">The Guitar Social</a>, which -in addition to social events and courses- provides free music tuition to people affected by disabilities, mental health issues, or homelessness amongst other considerations.</p>
-                </li>
-            <li><b>Comedy:</b>
-                <p>While at University I took the opportunity to get involved with the Comedy Society, contributing a number of articles to the satirical student news site Salvator News, as well as contributing material for live panel and sketch shows.</p>
+                <li><b>Guitar:</b>
+                      <p>I am a keen guitarist, and prior to commencing my degree I spent a very rewarding month volunteering with <a href="https://en-gb.facebook.com/theguitarsocial/">The Guitar Social</a>, which -in addition to social events and courses- provides free music tuition to people affected by disabilities, mental health issues, or homelessness amongst other considerations.</p>
+                    </li>
+                <li><b>Comedy:</b>
+                    <p>While at University I took the opportunity to get involved with the Comedy Society, contributing a number of articles to the satirical student news site Salvator News, as well as contributing material for live panel and sketch shows.</p>
+                    </li>
+                <li><b>Historical book preservation:</b>
+                    <p>Since March 2019 I have been volunteering at the Library of Innerpeffray, assisting with the operation of a historical library/museum by:
+                    </p>
+                        <ul>
+                            <li>Making formal recommendations on IT-related matters such as computer systems purchases.</li>
+                            <li>Conducting computer setup and software installation.</li>
+                            <li>Assisting with the cataloguing of new collections.</li>
+                        </ul>
                 </li>
             </ul>
             </div>
