--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           <div class="card-header">
             <a class="collapsed card-link" data-toggle="collapse" href="#collapseOther">
             <i class="far fa-smile"></i>
-            Interests and volunteering
+            Interests and volunteering experience
             </a>
           </div>
           <div id="collapseOther" class="collapse" data-parent="#accordion">
@@ -246,13 +246,13 @@
                 <li><b>Comedy:</b>
                     <p>While at University I took the opportunity to get involved with the Comedy Society, contributing a number of articles to the satirical student news site Salvator News, as well as contributing material for live panel and sketch shows.</p>
                     </li>
-                <li><b>Historical book preservation:</b>
-                    <p>Since March 2019 I have been volunteering at the Library of Innerpeffray, assisting with the operation of a historical library/museum by:
+                <li><b>Historical conservation:</b>
+                    <p>Since March 2019 I have been volunteering at <a href="http://www.innerpeffraylibrary.co.uk/#&panel1-1">The Library of Innerpeffray</a>, a heritage site preserving Scotland's oldest free public lending library. I have been assisting with the operation of this historical library/museum by:
                     </p>
                         <ul>
                             <li>Making formal recommendations on IT-related matters such as computer systems purchases.</li>
                             <li>Conducting computer setup and software installation.</li>
-                            <li>Assisting with the cataloguing of new collections.</li>
+                            <li>Assisting with the cataloguing of new collections of historical and rare books.</li>
                         </ul>
                 </li>
             </ul>
