--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
       <h2>About Me</h2>
         <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 col-xl-2">
-          <img class="img-responsive img-thumbnail" src="siteimgs/mephoto.png">
+          <img class="img-responsive img-thumbnail img-round" src="siteimgs/mephotocropped.png">
         </div>
         <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 col-xl-10">
-          <p>I am presently seeking employment in a technology-centric role with a focus on programming (e.g. web or software development) for the months up until the beginning of September 2019, when I will begin on an exciting graduate technology/software development programme. During this time I am seeking employment which will enable me to further build on the skills developed while studying for an MSc in Computing and IT at the University of St Andrews, which I have recently completed with Distinction. This degree has given me experience in a range of technologies including HTML5, CSS, Bootstrap, Foundation, Javascript and jQuery, Node.js, Express.js, CouchDB, mySQL, and Tableau. I am also presently learning React.</p>
+          <p>Hi, I'm David Burns, and I welcome you to my personal website. Take a look around and you'll find a range of my web development projects, as well as my CV details. If you have any questions, do get in touch through the contact details listed above.</p> 
+            <p>At the moment I am seeking temporary employment in a technology-centric role with a focus on programming (e.g. web or software development) for the months up until the beginning of September 2019, when I will begin on an exciting graduate technology/software development programme. During this time I am seeking employment which will enable me to further build on the skills developed while studying for an MSc in Computing and IT at the University of St Andrews, which I have recently completed with Distinction. This degree has given me experience in a range of technologies including HTML5, CSS, Bootstrap, Foundation, Javascript and jQuery, Node.js, Express.js, CouchDB, mySQL, and Tableau. I am also presently learning React.</p>
             <p>I am a keen learner, and discovered a passion for coding after taking up programming as a hobby through online courses. Prior to deciding to change field, my career was primarily in financial services regulation at the Bank of England, with a focus on digital communications and consumer protection policy development.
             </p>
         </div>
