--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="card-body">
               <ul>
                   <li><b>Front-end web development</b>
-                      <p> Capable of developing and testing valid and accessible responsive websites with Foundation or pure HTML5/CSS3. Prior to my current degree, I built Sharepoint sites and created effective content structures for Bank of England web and intranet pages.</p>
+                      <p> Capable of developing and testing valid and accessible responsive websites with Foundation or pure HTML5/CSS3. Prior to my current degree, I gained experience creating effective content structures for Bank of England web and intranet pages.</p>
                   </li>
                   <li><b>Web application development</b>
                       <p>During my degree I have gained experience developing single-page web applications using Javascript/jQuery and Express.js/Node.js (both individually and collaboratively) and using Git for project workflow management. Projects created for this course included a quiz game, a multiplayer checkers game, two games for Latin language learning, a Twitter-style messaging web application, and a forum incorporating a database backend and the use of a number of APIs for local weather, mapping, and news.</p>
