--- a/christiePage/fccTributeTest.html
+++ b/christiePage/fccTributeTest.html
@@ -3,6 +3,7 @@
 
     <head>
     <!-- ==== ASSETS ==== -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 
     <style>
@@ -283,7 +284,7 @@
 
         /* ========== PHONE SCREEN CSS ============== */
 
-        @media (max-width: 850px) {
+        @media (max-width: 650px) {
 
             .grid-container {
                 position: relative;
